<resources>
    <string name="app_name">mChanjo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    First Screen Resources-->
    <string name="title">Importance of Immunization</string>
    <string name="description">Immunisation saves lives. It protects you, your family and your community. Immunisation helps protect future generations by eradicating diseases</string>
    <string name="next">Next</string>
    <!--    Second Screen Resources-->
    <string name="title2">Umuhimu wa Chanjo</string>
    <string name="description2">Kinga huokoa maisha. Inakulinda wewe, familia yako na jamii yako. Kinga husaidia kulinda vizazi vijavyo kwa kutokomeza magonjwa</string>
    <!--    Third Screen Resources-->
    <string name="title3">Welcome to mChanjo</string>
    <string name="started">Let\'s Get Started</string>

    <!--Guidelines-->
    <string name="GuidelineTitle">Vaccine Science and Child/Adolescent Immunization Guidelines</string>
    <string name="BCGGuideline">BCG Guidelines</string>
    <string name="BCGGuideDescription">1. Injected on the upper left forearm at the junction of the lower two-thirds and the upper one third.
        2.Administer an injection of 0.05ml of the reconstituted vaccine for infants less than one year old and 0.1 ml for children above 1 year
    </string>
    <string name="BCGGuideDescription1">1.Children under 5years are given at birth or at any age upto 59months.
        2.Preterm infants should receive the BCG vaccine at the time of discharge from hospital from hospital irrespective of the current weight.
    </string>
    <string name="BCGGuideDescription2">1.For boPV,administer 2 drops orally which constitute one dose,for IPV administer as an intramuscular injection ,right outer thigh,2cm away from PCV site;Hexavalent administered intramuscular.
    </string>

    <string name="malariaGuideline">MALARIA GUIDELINE</string>
    <string name="malariaDescription1">administered by injection to the left detloid muscle at 6,7,9 and 24 months of age</string>
    <string name="malariaDescription2">Administered seasonally with a 5 dose strategy in areas with highly seasonal malaria or perennial malaria transmission with seasonal peaks</string>
    <string name="malariaDescription3">Malnourished or HIV positive infants should be vaccinated with RTS,S/AS01 vaccine using a standard schedule</string>

    <string name="hpvGuideline">HPV GUIDELINE</string>
    <string name="hpvDescription1">For 10 year old girls 2-dose schedule,0.5m/s intramuscularly in the left deltoid for 6 months apart</string>
    <string name="hpvDescription2">HIV patients should receive a 3-dose schedule(0,1-2,6 months)</string>
    <string name="hpvDescription3">For pregnant women the vaccination should be avoided due to lack of data</string>

    <!--vaccines-->
    <string name="Immunize">Immunize Client</string>
    <string name="select">Select Item</string>
    <string name="type">Vaccine Type : </string>
    <string name="dose1">Date of First Dosage :</string>
    <string name="dose2">Date of Second Dosage :</string>
    <string name="dose3">Date of Third Dosage :</string>
    <string name="dose4">Date of Fourth Dosage :</string>
    <string name="appointment"> Book appointment :</string>
    <string name="calendar">dd/mm/yyyy</string>
    <string name="BCGName">BCG Immunization</string>
    <string name="malariaName">Malaria Vaccine</string>
    <string name="HPVName">HPV Vaccine</string>
    <string name="VaccineReport">please fill the report below </string>

    <!--buttons-->
    <string name="Next">Next</string>
    <string name="back">Back</string>

    <string name="vaccineReportTitle">Client\'s Full immunization and Vaccination History</string>
    <string name="records">IMMUNIZATION RECORDS</string>

    <string name="clientList">Choose Client</string>




    <!--    Skip resource-->
    <string name="skip">Skip</string>
</resources>