<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"  >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:src="@drawable/img004"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/GuidelineTitle"
                android:gravity="center"
                android:fontFamily="@font/josefin_sans"
                android:textSize="30sp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:padding="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/BCGButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/BCGGuideline"
                    android:textColor="@color/white"
                    android:background="@color/blue"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/HPVButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hpvGuideline"
                    android:textColor="@color/white"
                    android:background="@color/blue"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/MalariaButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/malariaGuideline"
                    android:textColor="@color/white"
                    android:background="@color/blue"
                    android:layout_margin="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>